# waki

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/client/: Cargo.toml  README.md
examples/client/src/: bindings.rs  main.rs
examples/server/: Cargo.toml  README.md
examples/server/src/: bindings.rs  lib.rs
scripts/: vendor-wit.sh
test-programs/: Cargo.toml
test-programs/artifacts/: Cargo.toml  build.rs  wasi_snapshot_preview1.command.wasm
waki/: Cargo.toml  build.rs
waki-macros/: Cargo.toml
waki-macros/src/: dummy.rs  export.rs  lib.rs
waki/src/: body.rs  client.rs  header.rs  lib.rs  request.rs  response.rs
waki/src/common/: header.rs  mod.rs  request_and_response.rs  scheme.rs
waki/src/multipart/: constants.rs  mod.rs  parser.rs
waki/tests/: client.rs  server.rs
waki/tests/all/: client.rs  main.rs  server.rs
waki/tests/common/: mod.rs
waki/wit/: world.wit
