[workspace]
resolver = "2"
members = [
    "waki",
    "waki-macros",
    "test-programs",
]
exclude = ["examples"]

[workspace.package]
version = "0.5.0"
authors = ["Xinzhao Xu"]
edition = "2021"
categories = ["wasm"]
keywords = ["webassembly", "wasm", "wasi"]
repository = "https://github.com/wacker-dev/waki"
license = "Apache-2.0"
description = "HTTP client and server library for WASI"
readme = "README.md"

[workspace.dependencies]
waki-macros = { path = "waki-macros", version = "0.5.0" }

anyhow = "1.0.89"
serde = "1.0.210"
