[package]
name = "waki-macros"
readme.workspace = true
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.66", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.85"
