[package]
name = "waki"
readme.workspace = true
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
waki-macros.workspace = true

anyhow.workspace = true
serde.workspace = true
wit-bindgen = "0.26.0"
url = "2.5.0"
http = "1.1.0"
serde_urlencoded = "0.7.1"
serde_json = { version = "1.0.117", optional = true }
mime = { version = "0.3.17", optional = true }
mime_guess = { version = "2.0.4", optional = true }
rand = { version = "0.8.5", optional = true }
memchr = { version = "2.7.2", optional = true }
bytes = { version = "1.6.0", optional = true }
httparse = { version = "1.9.3", optional = true }

[features]
json = ["dep:serde_json"]
multipart = ["dep:mime", "dep:mime_guess", "dep:rand", "dep:memchr", "dep:bytes", "dep:httparse"]

[dev-dependencies]
test-programs-artifacts = { path = "../test-programs/artifacts" }

wasmtime = "23.0.1"
wasmtime-wasi = "23.0.1"
wasmtime-wasi-http = "23.0.1"
hyper = "1.3.1"
http-body-util = "0.1.1"
tokio = { version = "1.38.0", features = ["macros"] }
